controller modify